[gd_scene load_steps=7 format=3 uid="uid://dt2rnobhgbn6u"]

[ext_resource type="Texture2D" uid="uid://wf3vvin1frke" path="res://Textures/GUI/Carved_3Slides.png" id="1_qpn02"]
[ext_resource type="Script" path="res://Utility/item_option.gd" id="1_wxj5g"]
[ext_resource type="FontFile" uid="uid://bxc8s2lojtim4" path="res://Font/CorrectionBrush-ywW7Y.ttf" id="2_uacex"]
[ext_resource type="Texture2D" uid="uid://d4efdj5o2hbc2" path="res://Textures/Items/Upgrades/Goblins/meat.png" id="3_8a5eh"]
[ext_resource type="AudioStream" uid="uid://12huo1im5m43" path="res://Audio/GUI/hover.wav" id="5_dalup"]
[ext_resource type="AudioStream" uid="uid://b4px16cjadg3f" path="res://Audio/GUI/click.wav" id="6_0wntq"]

[node name="ItemOption" type="TextureRect"]
texture_filter = 2
custom_minimum_size = Vector2(300, 125)
anchors_preset = -1
anchor_right = 0.288
anchor_bottom = 0.156
offset_left = 1.0
offset_right = 0.359985
offset_bottom = 12.68
texture = ExtResource("1_qpn02")
script = ExtResource("1_wxj5g")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 30.0
offset_right = 87.0
offset_bottom = 88.0
texture = ExtResource("3_8a5eh")
expand_mode = 2

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.101961)
layout_mode = 0
offset_right = 368.0
offset_bottom = 126.0

[node name="lbl_name" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 100.0
offset_top = 15.0
offset_right = 248.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uacex")
theme_override_font_sizes/font_size = 27
text = "Name"

[node name="lbl_description" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 101.0
offset_top = 56.0
offset_right = 354.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uacex")
theme_override_font_sizes/font_size = 16
text = "description of item
"
autowrap_mode = 3

[node name="lbl_level" type="Label" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 271.0
offset_top = 17.0
offset_right = 350.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uacex")
theme_override_font_sizes/font_size = 20
text = "Level: x"
autowrap_mode = 3

[node name="snd_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_dalup")

[node name="snd_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0wntq")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="finished" from="snd_click" to="." method="_on_snd_click_finished"]
